Kubernetes/src/main/resources/k8s/my-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-service
  labels:
    run: my-nginx-service
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    run: my-nginx
