Kubernetes/src/main/resources/k8s/my-nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /my-nginx
            backend:
              serviceName: my-nginx-service
              servicePort: 80
